# mdcheck

./: README.md  mdcheck.cabal  release.nix
.github/workflows/: build.yml
src/: Main.hs
test-data/: md1.md  md2.md
